--- a/src/AppBundle/Resources/views/Search/display-card.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card.html.twig
@@ -25,7 +25,7 @@
         		</div>
         	</div>
         	<div class="col-sm-5" style="margin-bottom:2em">
-        		<div class="card-image">
+        		<div>
         			{% if card.imagesrc %}
         			   <img src="{{ card.imagesrc }}" alt="{{ card.name }}" class="img-responsive" style="margin:auto">
         			{% else %}
