--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -1,10 +1,17 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
+{% block stylesheets %}
+<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
+{% endblock %}
+
 {% block body %}
 
+<div class="jumbotron">
 <div class="container">
-
+<h1 class="site-title">agot<span>2</span>db</h1>
+<div class="site-slogan">The Only Deckbuilder That Matters</div>
 </div> <!-- .container -->
+</div>
 
 {% endblock %}
 
