--- a/src/AppBundle/Resources/views/Builder/directimport.html.twig
+++ b/src/AppBundle/Resources/views/Builder/directimport.html.twig
@@ -4,7 +4,7 @@
 
 <script src="{{ asset('/bundles/app/js/directimport.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/app.fuzzy_search.js') }}"></script>
-<script src="{{ asset('/bundles/app/libs/string_score.min.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/string_score.min.js') }}"></script>
 <script type="text/javascript">
 
 var CardDB, CardNames;
@@ -15,7 +15,7 @@ var CardDB, CardNames;
 
 {% block body %}
 
-<div class="container">
+<div class="main container">
 
 <div class="row">
 
