--- a/src/AppBundle/Resources/views/Builder/tab-pane-check.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-check.html.twig
@@ -5,7 +5,7 @@
 <!-- Graphs -->
 <table class="table table-condensed" id="table-graph-costs">
 <thead>
-<tr><th colspan="1"><span class="glyphicon glyphicon-stats"></span> Repartition by Cost</th></tr>
+<tr><th colspan="1"><span class="fa fa-bar-chart"></span> Repartition by Cost</th></tr>
 </thead>
 <tbody>
 <tr>
@@ -16,7 +16,7 @@
 
 <table class="table table-condensed" id="table-graph-strengths">
 <thead>
-<tr><th colspan="1"><span class="glyphicon glyphicon-stats"></span> Repartition by Strength</th></tr>
+<tr><th colspan="1"><span class="fa fa-bar-chart"></span> Repartition by Strength</th></tr>
 </thead>
 <tbody>
 <tr>
