--- a/src/AppBundle/Resources/views/Builder/table-suggestions.html.twig
+++ b/src/AppBundle/Resources/views/Builder/table-suggestions.html.twig
@@ -2,7 +2,7 @@
 <!-- Suggestions -->
 <table class="table table-condensed" id="table-suggestions">
 <thead>
-<tr><th colspan="6"><span class="glyphicon glyphicon-fast-forward"></span> Card suggestions</th></tr>
+<tr><th colspan="6"><span class="fa fa-fast-forward"></span> Card suggestions</th></tr>
 </thead>
 <tbody>
 <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
