--- a/src/AppBundle/Resources/views/Decklist/identity-and-stats.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/identity-and-stats.html.twig
@@ -12,7 +12,7 @@
 		<div id="latestpack"></div>
 		{% if decklist.tournament %}
         <a class="btn btn-ghost btn-success btn-sm" href="{{ path('decklists_list', {type:'tournament'}) }}">
-            <span class="glyphicon glyphicon-certificate"></span> {{ decklist.tournament }}
+            <span class="fa fa-certificate"></span> {{ decklist.tournament }}
         </a>
         {% endif %}
     </div><!-- /.col-md-9 -->
