--- a/src/AppBundle/Resources/views/Decklist/table-graph-costs.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/table-graph-costs.html.twig
@@ -1,6 +1,6 @@
 <table class="table table-condensed" id="table-graph-costs">
 <thead>
-<tr><th colspan="1"><span class="glyphicon glyphicon-stats"></span> Repartition by Cost</th></tr>
+<tr><th colspan="1"><span class="fa fa-bar-chart"></span> Repartition by Cost</th></tr>
 </thead>
 <tbody>
 <tr>
