--- a/src/AppBundle/Resources/views/Default/donators.html.twig
+++ b/src/AppBundle/Resources/views/Default/donators.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="container decklists">
+<div class="main container">
 <div class="row">
 
 <div class="col-md-12">
@@ -14,7 +14,7 @@
 {% for donator in donators %}
 <li>
     <a href="{{ path('user_profile_view', {user_id:donator.id,user_name:donator.username|e('url')}) }}" class="username {{ donator.faction }}">{{ donator.username }}</a>
-    <span class="glyphicon glyphicon-gift donator" title="agot2db Gracious Donator"></span>
+    <span class="fa fa-gift donator" title="agot2db Gracious Donator"></span>
 </li>
 {% endfor %}
 </ul>
