--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-<div class="container reviews">
+<div class="main container">
 
 <div class="text-center">
 <ul class="pagination pagination-sm" style="margin-top:0">
@@ -41,7 +41,7 @@
     <article class="review" data-code="{{ review.id }}" id="review-{{ review.id }}">
        <div class="review-like">
            <a id="review-social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom" title="Like that review">
-        	   <span class="glyphicon glyphicon-heart"></span> <span class="num">{{ review.nbVotes }}</span>
+        	   <span class="fa fa-heart"></span> <span class="num">{{ review.nbVotes }}</span>
     	   </a>
        </div>
        <div class="review-content">
@@ -53,7 +53,7 @@
        </div>
        <div class="review-author">
            <a href="{{ path('user_profile_view', {user_id:review.user.id,user_name:review.user.username|e('url')}) }}" rel="author" class="username {{ review.user.faction }}">{{ review.user.username }}</a>
-           {% if review.user.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
+           {% if review.user.donation > 0 %}<span class="fa fa-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
     	   <small class="reputation">{{ review.user.reputation }}</small>
        </div>
        
@@ -63,7 +63,7 @@
        <div class="review-comment text-muted small">{{ comment.text }}
        &mdash;
        <a title="{{ comment.author.reputation }} reputation" href="{{ path('user_profile_view', {user_id:comment.author.id,user_name:comment.author.username|e('url')}) }}" rel="author" class="username {{ comment.author.faction }}">{{ comment.author.username }}</a>
-           {% if comment.author.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
+           {% if comment.author.donation > 0 %}<span class="fa fa-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
        <time datetime="{{ comment.date_creation|date('c') }}" title="{{ comment.date_creation|date('F jS, Y') }}">{{ comment.date_creation|date('n/j/y') }}</time>
     </div>
        {% endfor %}
