--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Card Search{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="main container">
 
 <div class="row">
 
