--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-<div class="container decks">
+<div class="main container">
 
 {% for flashMessage in app.session.flashbag.get('error') %}
     <div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>{{ flashMessage }}</div>
@@ -28,10 +28,10 @@
 
 <div class="row" style="margin-bottom:10px">
 <div class="col-md-12">
-	<a href="{{ path('deck_buildform') }}" class="btn btn-default btn-sm"{% if cannotcreate %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-plus"></span> New Deck</a>
+	<a href="{{ path('deck_buildform') }}" class="btn btn-default btn-sm"{% if cannotcreate %} disabled="disabled"{% endif %}><span class="fa fa-plus"></span> New Deck</a>
 	<div class="btn-group">
 		<button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown"{% if cannotcreate %} disabled="disabled"{% endif %}>
-			<span class="glyphicon glyphicon-import"></span> Import Deck <span class="caret"></span>
+			<span class="fa fa-upload"></span> Import Deck <span class="caret"></span>
 		</button>
 		<ul class="dropdown-menu" role="menu">
 			<li><a href="{{ path('deck_import') }}" id="btn-import-paste">Copy/paste</a></li>
@@ -46,23 +46,23 @@
 <div class="col-md-12">
 	<div class="btn-group" id="btn-group-selection">
 		<button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown">
-			<span class="glyphicon glyphicon-briefcase"></span> With Selection <span class="caret"></span>
+			<span class="fa fa-check-square-o"></span> With Selection <span class="caret"></span>
 		</button>
 		<ul class="dropdown-menu" role="menu">
-		    <li class="dropdown-header"><span class="glyphicon glyphicon-transfer"></span> Compare</li>
+		    <li class="dropdown-header"><span class="fa fa-compress"></span> Compare</li>
 		    <li><a href="#" id="btn-compare">Compare two or more decks</a></li>
 		    <li><a href="#" id="btn-compare-collection">Compare one deck vs the others</a></li>
-		    <li class="dropdown-header"><span class="glyphicon glyphicon-tag"></span> Tags</li>
+		    <li class="dropdown-header"><span class="fa fa-tag"></span> Tags</li>
 		    <li><a href="#" id="btn-tag-add">Add one or more tags</a></li>
 			<li><a href="#" id="btn-tag-remove-one">Remove one or more tags</a></li>
 			<li><a href="#" id="btn-tag-remove-all">Clear all tags</a></li>
-			<li class="dropdown-header"><span class="glyphicon glyphicon-trash"></span> Delete</li>
-			<li><a href="#" id="btn-delete-selected"><span style="color:red" class="glyphicon glyphicon-warning-sign"></span> Delete all decks selected</a></li>
+			<li class="dropdown-header"><span class="fa fa-trash-o"></span> Delete</li>
+			<li><a href="#" id="btn-delete-selected"><span style="color:red" class="fa-exclamation-triangle "></span> Delete all decks selected</a></li>
 		</ul>
 	</div>
 	<div class="btn-group" id="btn-group-sort">
 		<button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown">
-			<span class="glyphicon glyphicon-sort"></span> Sort List <span class="caret"></span>
+			<span class="fa fa-sort"></span> Sort List <span class="caret"></span>
 		</button>
 		<ul class="dropdown-menu" role="menu">
 			<li><a href="#" id="btn-sort-update">By date of last update</a></li>
@@ -116,10 +116,10 @@
 			{% endfor %}
 		</td>
 		<td>
-			<a href="{{ path('deck_edit',{deck_id:deck.id}) }}" class="btn btn-xs btn-default" data-toggle="tooltip" title="Edit"><span class="glyphicon glyphicon-pencil"></span></a>
-			<button class="btn btn-xs btn-default btn-publish-deck" data-toggle="tooltip" title="Publish"><span class="glyphicon glyphicon-share"></span></button>
-			<a href="{{ path('deck_duplicate',{deck_id:deck.id}) }}" class="btn btn-xs btn-default" data-toggle="tooltip" title="Duplicate"><span class="glyphicon glyphicon-plus"></span></a>
-			<button class="btn btn-xs btn-default btn-delete-deck" data-toggle="tooltip" title="Delete"><span class="glyphicon glyphicon-trash"></span></button>
+			<a href="{{ path('deck_edit',{deck_id:deck.id}) }}" class="btn btn-xs btn-default" data-toggle="tooltip" title="Edit"><span class="fa fa-pencil"></span></a>
+			<button class="btn btn-xs btn-default btn-publish-deck" data-toggle="tooltip" title="Publish"><span class="fa fa-share"></span></button>
+			<a href="{{ path('deck_duplicate',{deck_id:deck.id}) }}" class="btn btn-xs btn-default" data-toggle="tooltip" title="Duplicate"><span class="fa fa-plus"></span></a>
+			<button class="btn btn-xs btn-default btn-delete-deck" data-toggle="tooltip" title="Delete"><span class="fa fa-trash-o"></span></button>
 		</td>
 		<td><img src="{{ asset('/bundles/app/images/factions/' ~ deck.faction_code ~ '.png') }}"></td>
 	</tr>
