--- a/src/AppBundle/Resources/views/Builder/draw-simulator.html.twig
+++ b/src/AppBundle/Resources/views/Builder/draw-simulator.html.twig
@@ -2,7 +2,7 @@
 <table class="table table-condensed" id="table-draw-simulator">
 <thead>
 	<tr>
-		<th colspan="1"><span class="glyphicon glyphicon-repeat"></span> Card draw simulator</th>
+		<th colspan="1"><span class="fa fa-repeat"></span> Card draw simulator</th>
 	</tr>
 </thead>
 <tbody>
