--- a/src/AppBundle/Resources/views/Decklist/comments.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/comments.html.twig
@@ -1,17 +1,17 @@
 <table class="table">
 <thead>
-<tr><th><span class="glyphicon glyphicon-comment"></span> {{ decklist.nbcomments }} comments</th></tr>
+<tr><th><span class="fa fa-comment"></span> {{ decklist.nbcomments }} comments</th></tr>
 </thead>
 <tbody>
 {% for comment in decklist.comments %}
 <tr><td id="comment-{{ comment.id }}">
     <div class="small comment-toggler" style="{% if not comment.hidden %}display:none{% endif %}">
-        <a href="#div-comment-{{ comment.id }}" data-toggle="collapse" class="text-muted pull-right" style="margin-left:.5em"><span class="glyphicon glyphicon-eye-open"></span></a>
+        <a href="#div-comment-{{ comment.id }}" data-toggle="collapse" class="text-muted pull-right" style="margin-left:.5em"><span class="fa fa-eye"></span></a>
     </div>
     <div class="collapse{% if not comment.hidden %} in{% endif %}" id="div-comment-{{ comment.id }}">
         <span class="comment-date" title="{{ comment.creation|date('r') }}">{{ comment.creation|date('M d, Y') }}</span>
         <a href="{{ path('user_profile_view', {user_id:comment.user_id,user_name:comment.author|e('url')}) }}" class="comment-author username {{ comment.authorcolor }}">{{ comment.author }}</a>
-        {% if comment.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
+        {% if comment.donation > 0 %}<span class="fa fa-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
         <div class="comment-text">{{ comment.text|raw }}</div>
     </div>
 </td></tr>
