--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -18,7 +18,7 @@ app.user.params.decklist_id = Decklist.id;
 </script>
 {% endblock %}
 {% block body %}
-<div class="container decklist">
+<div class="main container">
 	<div class="row">
 		<div class="col-xs-12">
 			<h1 class="decklist-name">
@@ -30,13 +30,13 @@ app.user.params.decklist_id = Decklist.id;
 					<span class="hidden-xs">published: </span>
 					<time datetime="{{ decklist.creation|date('c') }}">{{ decklist.creation|date('M d, Y') }}</time>
 					| <a id="social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom" title="Like">
-						<span class="glyphicon glyphicon-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
+						<span class="fa fa-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
 					</a>
 					| <a id="social-icon-favorite" href="#" class="social-icon-favorite" data-toggle="tooltip" data-placement="bottom" title="Favorite">
-						<span class="glyphicon glyphicon-star"></span> <span class="num">{{ decklist.nbfavorites }}</span>
+						<span class="fa fa-star"></span> <span class="num">{{ decklist.nbfavorites }}</span>
 					</a>
 					| <a id="social-icon-comment" href="#comment-form" class="social-icon-comment" data-toggle="tooltip" data-placement="bottom" title="Comment">
-						<span class="glyphicon glyphicon-comment"></span> <span class="num">{{ decklist.nbcomments }}</span>
+						<span class="fa fa-comment"></span> <span class="num">{{ decklist.nbcomments }}</span>
 					</a>
 				</div>
 			</div>
