--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -31,7 +31,7 @@ $(function () {
 
 {% block body %}
 
-<div class="container decklists">
+<div class="main container">
 <div class="row">
 <div class="col-md-3">
 
@@ -43,7 +43,7 @@ $(function () {
 {% set linkurl = path('decklists_list', {type:'halloffame'}) %}<li class="{% if url == linkurl %}active{% endif %}"><a href="{{ linkurl }}">Hall of Fame</a></li>
 {% set linkurl = path('decklists_list', {type:'favorites'}) %}<li class="{% if url == linkurl %}active{% endif %}"><a href="{{ linkurl }}">My favorites</a></li>
 {% set linkurl = path('decklists_list', {type:'mine'}) %}<li class="{% if url == linkurl %}active{% endif %}"><a href="{{ linkurl }}">My decklists</a></li>
-{% set linkurl = path('decklists_searchform') %}<li class="{% if url == linkurl %}active{% endif %}"><a href="{{ linkurl }}"><span class="glyphicon glyphicon-search"></span> Search</a></li>
+{% set linkurl = path('decklists_searchform') %}<li class="{% if url == linkurl %}active{% endif %}"><a href="{{ linkurl }}"><span class="fa fa-search"></span> Search</a></li>
 </ul>
 
 {% include 'AppBundle:Default:google_adaptable_ad.html.twig' %}
@@ -90,9 +90,9 @@ $(function () {
     <article>
 	<h4>
 		<small class="pull-right social">
-			<span class="glyphicon glyphicon-heart social-icon-like"></span> {{ decklist.nbVotes }}
-			<span class="glyphicon glyphicon-star social-icon-favorite"></span> {{ decklist.nbfavorites }}
-			<span class="glyphicon glyphicon-comment social-icon-comment"></span> {{ decklist.nbcomments }}
+			<span class="fa fa-heart social-icon-like"></span> {{ decklist.nbVotes }}
+			<span class="fa fa-star social-icon-favorite"></span> {{ decklist.nbfavorites }}
+			<span class="fa fa-comment social-icon-comment"></span> {{ decklist.nbcomments }}
 		</small>
 		<a class="decklist-name" href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.name_canonical|e('url') }) }}">{{ decklist.name }}</a>
 	</h4>
@@ -100,12 +100,12 @@ $(function () {
 		<time class="pull-right" datetime="{{ decklist.creation|date('c') }}">{{ decklist.creation|date('M d') }}</time>
 		<span class="username">
     		<a href="{{ path('user_profile_view', {user_id:decklist.user_id,user_name:decklist.username|e('url')}) }}" class="{{ decklist.usercolor }}">{{ decklist.username }}</a>
-    		{% if decklist.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
+    		{% if decklist.donation > 0 %}<span class="fa fa-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
     		<small class="reputation">{{ decklist.reputation }}</small>
 		</span>
         {% if decklist.tournament %}
 		<span class="text-success" style="margin-left:1em">
-            <span class="glyphicon glyphicon-certificate"></span> {{ decklist.tournament }}
+            <span class="fa fa-certificate"></span> {{ decklist.tournament }}
         </span>
 	    {% endif %}
 	</h5>
