--- a/src/AppBundle/Resources/views/Default/apidoc.html.twig
+++ b/src/AppBundle/Resources/views/Default/apidoc.html.twig
@@ -3,7 +3,7 @@
 {% block title %}API Documentation{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="main container">
 
 <h1>{{ block('title') }}</h1>
 
