--- a/src/AppBundle/Resources/views/Builder/initbuild.html.twig
+++ b/src/AppBundle/Resources/views/Builder/initbuild.html.twig
@@ -9,7 +9,7 @@
 <div class="row">
 	<div class="col-md-6">
 		<h1>Choose your faction</h1>
-		<ul class="list-group">
+		<ul class="list-group list-factions">
 		{% for faction in factions %}
 			<li class="list-group-item radio">
 				<label>
