--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -2,12 +2,11 @@
 <html>
   <head>
     <title>{{ pagetitle|default('Deckbuilder') }} &middot; agot2db</title>
-    <link rel="icon" sizes="16x16" href="/favicon.png" />
-    <link rel="icon" sizes="196x196" href="/icon.png" />
-    <link rel="apple-touch-icon" sizes="129x129" href="/apple-touch-icon.png" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="/icon-192.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/icon-120.png" />
     {% if pagedescription is defined %}<meta name="description" content="{{ pagedescription }}">{% endif %}
 
     <link href="{{ asset('/bundles/app/css/bootstrap.min.css') }}" rel="stylesheet">
